# RainAa

./: .gitignore  .sourcery.yaml  README.md  boot.py  main.py  pyproject.toml
module/: __init__.py  aichat.py  balance.py  fakegocq.py  flyme_caller.py  fm.py  helper.py  hsoer.py  mm.py  ota.py  recorder.py  sv.py  tasks.py
rainaa/: all.py  anime_thesaurus.py  config.py  perm.py  rdb.py  recovery.py  services.py
rainaa/tools/: alc_sender.py  classes.py  text2image.py
